responsive y aprovechar las ventajas de angular

--- a/src/app/components/drinks/drinks-filter/drinks-filter.component.html
+++ b/src/app/components/drinks/drinks-filter/drinks-filter.component.html
@@ -16,6 +16,9 @@
 </div>
 
 <div class="w-full flex flex-col items-center p-10">
+
+    <!-- CHILD -->
+
     <div class=" grid gap-8 grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 transition ease-in duration-300" 
             *ngIf="!licor_hidden">
         <div *ngFor="let item of licores" >
@@ -37,6 +40,10 @@
         </div>  
 
     </div>
+    <!-- CHILD -->
+
+
+
 </div>
 
 <!---------------------------------------------------------------------------------------------------------------------------->
@@ -149,6 +156,8 @@
         </div>  
 
     </div>
+    <img src="https://imageog.flaticon.com/icons/png/512/61/61032.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"  class="h-4" *ngIf="!hierba_hidden"> 
+
 </div>
 <!---------------------------------------------------------------------------------------------------------------------------->
 
