--- a/src/app/components/prueba-edit/prueba-edit.component.html
+++ b/src/app/components/prueba-edit/prueba-edit.component.html
@@ -1,1 +1,33 @@
-<p>prueba-edit works!</p>
+<div *ngIf="!this.loading">
+    <p>EDITAR USUARIO</p>
+    <div class="w-full max-w-xs">
+    <form [formGroup]="form" (ngSubmit)="updateUser()" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="firstname">
+            First Name
+        </label>
+        <input formControlName="firstname" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="firstname" type="text">
+        </div>
+        <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="lastname">
+            Last Name
+        </label>
+        <input formControlName="lastname" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="lastname" type="text">
+        </div>
+        <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
+            Email
+        </label>
+        <input formControlName="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="text">
+        </div>
+        <div class="flex items-center justify-between">
+        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+            GUARDAR
+        </button>  
+        <button (click)="goBack()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+            REGRESAR
+        </button> 
+        </div>
+    </form>
+    </div>
+</div>
