--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
+ @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+
  html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
