--- a/src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.html
+++ b/src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.html
@@ -51,7 +51,7 @@
         <div class="md:flex md:items-center mb-6 ">
             <div class="md:w-1/3"></div>
                 <div class="flex space-x-4 justify-end md:w-2/3">
-                <button  (click)="createIngredient()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                <button  (click)="addIngredient()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
                     Crear
                 </button>
                 <button (click)="goBack()" class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
