adelanto create bar

--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -1,137 +1,184 @@
 <app-admin-header></app-admin-header>
-<div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
-  <div><h2 class="text-4xl">CREA UN BAR</h2></div>
-</div>
-<div class="w-full flex justify-center items-center h-full">
-    <form [formGroup]="form" class="w-2/4 content-center " encType="multipart/form-data">
 
-        <div class="md:flex md:items-center mb-6">
+<div *ngIf="!loading">
+    <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
+    <div><h2 class="text-4xl">CREA UN BAR</h2></div>
+    </div>
+    <div class="w-full flex justify-center items-center h-full">
+        <form [formGroup]="form" class="w-2/4 content-center " encType="multipart/form-data">
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Nombre
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="name" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Bar 360">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Horario de trabajo
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="working_hours" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Abiertos de 9pm a 4 am.">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Rating (1-5)
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="rating" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="number" min="1" max="5">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Costo promedio (1-5)
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="cost" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="number" min="1" max="5">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Twitter (Link de la cuenta)
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="twitter" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://twitter.com/usuario">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Facebook (Link de la cuenta)
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="facebook" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://facebook.com/usuario">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Instagram (Link de la cuenta)
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="instagram" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://instagram.com/usuario">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Email
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="email" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="email" placeholder="Ej. usuario@gmail.com">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Descripción
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="description" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Bar360 es un lugar agradable donde puedes relajarte mientars disfrutas de la buena música...">
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
             <div class="md:w-1/5">
             <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Nombre
+                Zona
             </label>
             </div>
-            <div class="md:w-4/5">
-            <input formControlName="name" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Bar 360">
+            <div class="md:w-4/5 relative">
+                <select formControlName="zone" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="grid-state">
+                    <ng-container *ngFor="let item of zones">
+                        <option [value]="item._id" *ngIf="item.available" >{{item.name}}</option>
+                    </ng-container>
+                </select>
+                <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+                </div>
             </div>
         </div>
 
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Horario de trabajo
-            </label>
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Dirección
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="address" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Calle 7, Av. 5">
+                </div>
             </div>
-            <div class="md:w-4/5">
-            <input formControlName="working_hours" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Abiertos de 9pm a 4 am.">
+            
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    ¿Es socio?
+                </label>
+                </div>
+                <label class="custom-label flex">
+                    <div class="bg-white shadow w-6 h-6 p-1 flex justify-center items-center mr-2">
+                        <input formControlName="associate" type="checkbox" class="hidden" checked>
+                        <svg class="hidden w-4 h-4 text-green-600 pointer-events-none" viewBox="0 0 172 172"><g fill="none" stroke-width="none" stroke-miterlimit="10" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode:normal"><path d="M0 172V0h172v172z"/><path d="M145.433 37.933L64.5 118.8658 33.7337 88.0996l-10.134 10.1341L64.5 139.1341l91.067-91.067z" fill="currentColor" stroke-width="1"/></g></svg>
+                    </div>
+                    <span class="select-none"></span>
+                </label>
             </div>
-        </div>
 
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Rating (1-5)
-            </label>
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Ícono
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                    <div class="flex items-center justify-center bg-grey-lighter">
+                        <label class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">   
+                            <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
+                            <input formControlName="main_image" type='file' class="hidden" (change)="selectMainImage($event)"/>
+                        </label>
+                    </div>
+                </div>
             </div>
-            <div class="md:w-4/5">
-            <input formControlName="rating" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="number" min="1" max="5">
-            </div>
-        </div>
-
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Costo promedio (1-5)
-            </label>
-            </div>
-            <div class="md:w-4/5">
-            <input formControlName="cost" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="number" min="1" max="5">
-            </div>
-        </div>
-
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Twitter (Link de la cuenta)
-            </label>
-            </div>
-            <div class="md:w-4/5">
-            <input formControlName="twitter" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://twitter.com/usuario">
-            </div>
-        </div>
-
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Facebook (Link de la cuenta)
-            </label>
-            </div>
-            <div class="md:w-4/5">
-            <input formControlName="facebook" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://facebook.com/usuario">
-            </div>
-        </div>
-
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Instagram (Link de la cuenta)
-            </label>
-            </div>
-            <div class="md:w-4/5">
-            <input formControlName="instagram" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. http://instagram.com/usuario">
-            </div>
-        </div>
-
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Email
-            </label>
-            </div>
-            <div class="md:w-4/5">
-            <input formControlName="email" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="email" placeholder="Ej. usuario@gmail.com">
-            </div>
-        </div>
-
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Descripción
-            </label>
-            </div>
-            <div class="md:w-4/5">
-            <input formControlName="description" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Bar360 es un lugar agradable donde puedes relajarte mientars disfrutas de la buena música...">
-            </div>
-        </div>
-
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Dirección
-            </label>
-            </div>
-            <div class="md:w-4/5">
-            <input formControlName="address" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Calle 7, Av. 5">
-            </div>
-        </div>
-
         
-      
-        <div class="md:flex md:items-center mb-6 ">
-            <div class="md:w-1/3"></div>
-                <div class="flex space-x-4 justify-end md:w-2/3">
-                <button  (click)="createIngredient()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                    Crear
-                </button>
-                <button (click)="goBack()" class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                    Regresar
-                </button>
+            <div class="md:flex md:items-center mb-6 ">
+                <div class="md:w-1/3"></div>
+                    <div class="flex space-x-4 justify-end md:w-2/3">
+                        <button  (click)="createBar()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                            Crear
+                        </button>
+                        <button (click)="goBack()" class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                            Regresar
+                        </button>
+                    </div>
             </div>
-        </div>
-
-
-
-    </form>
+        </form>
+    </div>
 </div>
 
 
