--- a/src/app/components/admin/admin-header/admin-header.component.html
+++ b/src/app/components/admin/admin-header/admin-header.component.html
@@ -1,8 +1,8 @@
-<div class="bg-black h-20">
+<div class="bg-black h-16">
   <img
     src="assets/images/Drinkly-2.png"
     alt="logo_drinkly"
-    class="object-scale-down h-20 mx-auto"
+    class="object-scale-down h-16 mx-auto"
   />
 </div>
 <div
@@ -12,8 +12,4 @@
     background-size: cover;
     background-position: top;
   "
-  
->
-
-
-</div>
+></div>
