--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,77 @@
-<p>login works!</p>
+<app-admin-header></app-admin-header>
+<div
+  class="h-20 w-full flex justify-center items-center"
+  style="font-family: 'Open Sans', sans-serif;"
+>
+  <div><h2 class="text-4xl">LOGUEATE</h2></div>
+</div>
+<div class="w-full flex justify-center items-center h-full">
+  <form
+    [formGroup]="form"
+    (ngSubmit)="onSubmit(form.value)"
+    class="w-2/4 content-center"
+  >
+    <div class="md:flex md:items-center mb-6">
+      <div class="md:w-1/5">
+        <label
+          class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+          for="inline-full-name"
+        >
+          Nombre de usuario
+        </label>
+      </div>
+      <div class="md:w-4/5">
+        <input
+          formControlName="user_name"
+          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+          id="inline-full-name"
+          type="text"
+          placeholder="Nombre de usuario"
+          required
+        />
+      </div>
+    </div>
+
+    <div class="md:flex md:items-center mb-6">
+      <div class="md:w-1/5">
+        <label
+          class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+          for="inline-full-name"
+        >
+          Contraseña
+        </label>
+      </div>
+      <div class="md:w-4/5">
+        <input
+          formControlName="password"
+          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+          id="inline-full-name"
+          type="password"
+          placeholder="Ingrese su contraseña"
+          required
+        />
+      </div>
+    </div>
+
+    <div class="md:flex md:items-center mb-6">
+      <div class="md:w-1/3"></div>
+      <div class="flex space-x-4 justify-end md:w-2/3">
+        <button
+          class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+          type="submit"
+          [disabled]="!form.valid"
+        >
+          Entrar
+        </button>
+        <button
+          class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+          type="button"
+        >
+          Regresar
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
+
+<app-footer></app-footer>
