--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -66,8 +66,9 @@
         <button
           class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
           type="button"
+          [routerLink]="'/register'"
         >
-          Regresar
+          Regístrate!
         </button>
       </div>
     </div>
