--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -114,22 +114,22 @@
             </div>
 
             <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                Zona
-            </label>
-            </div>
-            <div class="md:w-4/5 relative">
-                <select formControlName="zone" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="grid-state">
-                    <ng-container *ngFor="let item of zones">
-                        <option [value]="item._id" *ngIf="item.available" >{{item.name}}</option>
-                    </ng-container>
-                </select>
-                <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Zona
+                </label>
+                </div>
+                <div class="md:w-4/5 relative">
+                    <select formControlName="zone" class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="grid-state">
+                        <ng-container *ngFor="let item of zones">
+                            <option [value]="item._id" *ngIf="item.available" >{{item.name}}</option>
+                        </ng-container>
+                    </select>
+                    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                        <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+                    </div>
                 </div>
             </div>
-        </div>
 
             <div class="md:flex md:items-center mb-6">
                 <div class="md:w-1/5">
@@ -160,6 +160,18 @@
                     <span class="select-none"></span>
                 </label>
             </div>
+
+            <div formArrayName="phone" class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Número de teléfono
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                <input formControlName="address" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. Calle 7, Av. 5">
+                </div>
+            </div>
+
 
             <div class="md:flex md:items-center mb-6">
                 <div class="md:w-1/5">
