--- a/src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.html
+++ b/src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.html
@@ -68,33 +68,20 @@
 
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/5">
-        <label
-          class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-          for="inline-full-name"
-        >
+        <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
           Ícono
         </label>
       </div>
       <div class="md:w-4/5">
         <div class="flex items-center justify-center bg-grey-lighter">
-          <label
-            class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide border border-blue cursor-pointer hover:bg-orange-500 hover:text-white"
-          >
-            <span class="mt-2 text-base leading-normal"
-              >Selecciona un archivo</span
-            >
-            <input
-              formControlName="photo"
-              type="file"
-              class="hidden"
-              (change)="onSelectedFile($event)"
-            />
+          <label class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">
+            <span class="mt-2 text-base lead" type="file" class="hidden" (change)="onSelectedFile($event)"/>
+            <input formControlName="photo" type='file' class="hidden" (change)="onSelectedFile($event)"/>
           </label>
         </div>
       </div>
     </div>
 
-<<<<<<< HEAD
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3"></div>
       <div class="flex space-x-4 justify-end md:w-2/3">
@@ -115,7 +102,6 @@
       </div>
     </div>
   </form>
-=======
         <div class="md:flex md:items-center mb-6">
             <div class="md:w-1/5">
             <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
@@ -147,7 +133,6 @@
 
 
     </form>
->>>>>>> bars-vics
 </div>
 
 <app-footer></app-footer>
