--- a/src/app/components/drinks/filter-child/filter-child.component.html
+++ b/src/app/components/drinks/filter-child/filter-child.component.html
@@ -2,7 +2,7 @@
     <!-- CHILD -->
 
     <div class=" grid gap-4 md:gap-8 grid-cols-3 sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 transition ease-in duration-300" 
-            >
+           style="font-family: 'Open Sans', sans-serif;" >
         <div *ngFor="let item of ingredients" >
             <div class="w-24  md:w-40 "  (click)="select(item)">
                 <div 
