--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -286,7 +286,23 @@
                     <div class="flex items-center justify-center bg-grey-lighter">
                         <label class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">   
                             <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
-                            <input formControlName="main_image" type='file' class="hidden" (change)="selectMainImage($event)"/>
+                            <input formControlName="main_image" type='file' class="hidden" (change)="selectMainImage($event)" />
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Fotos
+                </label>
+                </div>
+                <div class="md:w-4/5">
+                    <div class="flex items-center justify-center bg-grey-lighter">
+                        <label class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">   
+                            <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
+                            <input ng2FileSelect  [uploader]="uploader" multiple  formControlName="photo" type='file' class="hidden" />
                         </label>
                     </div>
                 </div>
@@ -295,7 +311,7 @@
             <div class="md:flex md:items-center mb-6 ">
                 <div class="md:w-1/3"></div>
                 <div class="flex space-x-4 justify-end md:w-2/3">
-                    <button  [disabled]="form.invalid" (click)="createBar()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                    <button   (click)="createBar()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
                         Crear
                     </button>
                     <button (click)="goBack()" class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
