--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,9 +1,6 @@
-<div class="bg-black h-16">
-  <img
-    src="assets/images/Drinkly-2.png"
-    alt="logo_drinkly"
-    class="object-scale-down h-16 mx-auto"
-  />
+<div class="flex bg-black">
+  <app-sidebar></app-sidebar>
+  <img src="assets/images/Drinkly-2.png" alt="logo_drinkly" class="object-scale-down h-16 mx-auto" />
 </div>
 <div
   style="background-image: url('assets/images/404bg.jpg');"
