--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
   
 </div>
 <div
-  class="bg-gray-400 h-64 w-full flex items-center flex-col"
+  class="bg-gray-400 h-64 w-full flex items-center flex-col bg-fixed"
   style="
     background-image: url(assets/images/banner_drinkly.jpg);
     background-size: cover;
