--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -276,6 +276,19 @@
                 </div> 
             </div>
 
+            <div class="md:items-center mb-6">
+                <div class="md:w-full">
+                <label style="font-family: 'Open Sans', sans-serif;" class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Galería
+                </label>
+                </div>
+                <div class="md:w-full">
+                <label style="font-family: 'Open Sans', sans-serif;" class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4" for="inline-full-name">
+                    Por favor, esperar a que aparezcan las fotos. Esto indicará que fueron cargadas.
+                </label>
+                </div>
+            </div>
+
             <div class="md:flex md:items-center mb-6">
                 <div class="md:w-1/5">
                 <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
@@ -283,35 +296,77 @@
                 </label>
                 </div>
                 <div class="md:w-4/5">
-                    <div class="flex items-center justify-center bg-grey-lighter">
+
+                    <div *ngIf="!this.main_image" class="flex items-center justify-center bg-grey-lighter">
                         <label class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">   
                             <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
-                            <input formControlName="main_image" type='file' class="hidden" (change)="selectMainImage($event)" />
+                            <lib-file-upload-firestorage storagePath="bar" (res)="uploadEnRes($event)" class="hidden">
+                            </lib-file-upload-firestorage>
                         </label>
                     </div>
+
+                    <div *ngIf="this.main_image" class="width-full bg-grey-lighter">
+                        <div class="width-2/3 flex items-center justify-center">
+                            <img [src]="this.main_image" class="h-24">
+                        </div>
+                        <div class="flex space-x-4 justify-end w-full">
+                            <button  (click)="changeImage(this.main_image)" class="md:w-1/5 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                                Cambiar
+                            </button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
-            <div class="md:flex md:items-center mb-6">
-                <div class="md:w-1/5">
-                <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                    Fotos
-                </label>
-                </div>
-                <div class="md:w-4/5">
-                    <div class="flex items-center justify-center bg-grey-lighter">
-                        <label class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">   
-                            <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
-                            <input ng2FileSelect  [uploader]="uploader" multiple  formControlName="photo" type='file' class="hidden" />
-                        </label>
+
+             <div class="width-full">
+                <div *ngFor="let group of photo; let i = index;" class="width-full">
+                    <div class="md:flex md:items-center mb-6">
+
+                        <div class="md:w-1/5">
+                            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+                                Foto
+                            </label>
+                        </div>
+
+                        <div class="md:w-4/5">
+
+                            <div *ngIf="group=='null'" class="flex items-center justify-center bg-grey-lighter">
+                                <label class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">   
+                                    <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
+                                    <lib-file-upload-firestorage storagePath="bar" (res)="uploadPhoto($event, i)" class="hidden">
+                                    </lib-file-upload-firestorage>
+                                </label>
+                            </div>
+
+                            <div *ngIf="group!='null'" class="width-full bg-grey-lighter">
+                                <div class="width-2/3 flex items-center justify-center">
+                                    <img [src]="group" class="h-24">
+                                </div>
+                            </div>
+
+                            <div class="flex space-x-4 justify-end md:w-full">
+                                <button  (click)="addPhoto()" class="md:w-1/4 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                                    +
+                                </button>
+                                <button (click)="deletePhoto(group, i)" class="md:w-1/4 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                                    -
+                                </button>
+                            </div>
+
+                        </div>
                     </div>
-                </div>
+                    
+                </div> 
             </div>
+
+            
         
             <div class="md:flex md:items-center mb-6 ">
                 <div class="md:w-1/3"></div>
                 <div class="flex space-x-4 justify-end md:w-2/3">
-                    <button   (click)="createBar()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                    <button   [disabled]="form.invalid" (click)="createBar()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
                         Crear
                     </button>
                     <button (click)="goBack()" class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
