--- a/src/app/components/admin/drink/add-drink/add-drink.component.html
+++ b/src/app/components/admin/drink/add-drink/add-drink.component.html
@@ -92,16 +92,39 @@
           <label
             class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">
             <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
-            <input formControlName="photo" type='file' class="hidden" (change)="onSelectedFile($event)" />
+            <input formControlName="pictures" type='file' class="hidden" (change)="onSelectedFile($event)" />
           </label>
         </div>
       </div>
     </div>
 
+
+    <div class="md:flex md:items-center mb-6">
+      <div class="md:w-1/5">
+        <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+          Ingredientes
+        </label>
+      </div>
+
+      <div class="md:flex md:items-center mb-6" *ngFor="let item of ingredient_arr; let i=index">
+        <label class="md:w-2/3 block text-gray-500 font-bold">
+          <input class="mr-2 leading-tight" type="checkbox" (change)="getSelect(item)">
+          <span class="text-sm">
+            {{item.name}}
+          </span>
+        </label>
+      </div>
+
+
+
+    </div>
+
+
+
     <div class="md:flex md:items-center mb-6 ">
       <div class="md:w-1/3"></div>
       <div class="flex space-x-4 justify-end md:w-2/3">
-        <button (click)="addIngredient()"
+        <button (click)="addDrink()"
           class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
           type="button">
           Crear
