login en el sidebar

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,29 +1,18 @@
-
 <div class="flex bg-black">
   <app-sidebar></app-sidebar>
-  <a href="/bars"><img src="assets/images/Drinkly-2.png" alt="logo_drinkly" class="object-scale-down h-16 mx-auto" /></a>
-  
+  <a href="/bars"><img src="assets/images/Drinkly-2.png" alt="logo_drinkly"
+      class="object-scale-down h-16 mx-auto" /></a>
+  <a href="/login"> <img src="assets/images/login.png" alt="login"> </a>
 </div>
-<div
-  class="bg-gray-400 h-64 w-full flex items-center flex-col bg-fixed"
-  style="
+<div class="bg-gray-400 h-64 w-full flex items-center flex-col bg-fixed" style="
     background-image: url(assets/images/banner_drinkly.jpg);
     background-size: cover;
-  "
-  
->
+  ">
   <div class="w-full flex justify-center items-center h-full">
     <div *ngIf="hasSearchBar" class="pt-2 relative mx-auto text-black w-44">
-      <input
-        class="bg-white h-10 px-5 pr-20 rounded-full text-sm focus:outline-none"
-        type="search"
-        name="search"
-        placeholder="Busca por {{searchBarContent}}"
-      />
-      <button
-        type="submit"
-        class="absolute right-0 top-0 mt-5 mr-6 focus:outline-none"
-      >
+      <input class="bg-white h-10 px-5 pr-20 rounded-full text-sm focus:outline-none" type="search" name="search"
+        placeholder="Busca por {{searchBarContent}}" />
+      <button type="submit" class="absolute right-0 top-0 mt-5 mr-6 focus:outline-none">
         <img src="assets/images/lupa.png" alt="lupita" class="h-4 w-4" />
       </button>
     </div>
