--- a/src/app/components/admin/drink/add-drink/add-drink.component.html
+++ b/src/app/components/admin/drink/add-drink/add-drink.component.html
@@ -88,15 +88,37 @@
         </label>
       </div>
       <div class="md:w-4/5">
-        <div class="flex items-center justify-center bg-grey-lighter">
+
+        <div *ngIf="!this.main_image" class="flex items-center justify-center bg-grey-lighter">
           <label
             class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">
             <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
-            <input formControlName="pictures" type='file' class="hidden" (change)="onSelectedFile($event)" />
+            <lib-file-upload-firestorage storagePath="drink" (res)="uploadEnRes($event)" class="hidden">
+            </lib-file-upload-firestorage>
           </label>
         </div>
+
+        <div *ngIf="this.main_image" class="width-full bg-grey-lighter">
+          <div class="width-2/3 flex items-center justify-center">
+            <img [src]="this.main_image" class="h-24">
+          </div>
+          <div class="flex space-x-4 justify-end w-full">
+            <button (click)="changeImage(this.main_image)"
+              class="md:w-1/5 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              type="button">
+              Cambiar
+            </button>
+          </div>
+        </div>
+
       </div>
     </div>
+
+
+
+
+
+
 
 
     <div class="md:flex md:items-center mb-6">
