--- a/src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.html
+++ b/src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.html
@@ -7,7 +7,7 @@
   <div><h2 class="text-4xl">LISTA DE INGREDIENTES</h2></div>
 </div>
 
-<div *ngIf="!loading">
+<div *ngIf="!loading" class="pb-32">
   <div
     *ngFor="let ing of ingredients"
     class="w-full flex justify-center items-center h-full"
