--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,10 +1,14 @@
 <div class="flex bg-black">
   <app-sidebar></app-sidebar>
-  <img src="assets/images/Drinkly-2.png" alt="logo_drinkly" class="object-scale-down h-16 mx-auto" />
+  <img
+    src="assets/images/Drinkly-2.png"
+    alt="logo_drinkly"
+    class="object-scale-down h-16 mx-auto"
+  />
 </div>
 <div
   style="background-image: url('assets/images/404bg.jpg');"
-  class="my-6 pt-24 pb-64 bg-cover bg-blue-700 m-auto max-w-5xl self-center flex items-center rounded-lg shadow"
+  class="my-6 pt-24 pb-64 mt-48 bg-cover bg-blue-700 m-auto max-w-5xl self-center flex items-center rounded-lg shadow"
 >
   <div
     class="p-10 ml-20 shadow-2xl rounded-lg items-center"
