--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,7 +5,7 @@
 >
   <div><h2 class="text-4xl">REGÍSTRATE</h2></div>
 </div>
-<div class="w-full flex justify-center items-center h-full py-16">
+<div class="w-full flex justify-center items-center h-full pt-16 pb-48">
   <form
     [formGroup]="form"
     (ngSubmit)="onSubmit(form.value)"
@@ -249,10 +249,11 @@
           Crear
         </button>
         <button
-          class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+          class="shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
           type="button"
+          [routerLink]="'/login'"
         >
-          Regresar
+          ¿Ya tienes una cuenta? Entra!
         </button>
       </div>
     </div>
