--- a/src/app/components/admin/bar/edit-bar/edit-bar.component.html
+++ b/src/app/components/admin/bar/edit-bar/edit-bar.component.html
@@ -9,7 +9,7 @@
 
 <div *ngIf="!loading">
     <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
-    <div><h2 class="text-4xl">CREA UN BAR</h2></div>
+    <div><h2 class="text-4xl">EDITA UN BAR</h2></div>
     </div>
     <div class="w-full flex justify-center items-center h-full">
         <form [formGroup]="form" class="w-2/4 content-center " encType="multipart/form-data">
@@ -188,6 +188,7 @@
                 </label>
             </div>
 
+            
             <div formArrayName="phone" class="width-full">
                 <div *ngFor="let group of PhoneArray.controls; let i = index;" [formGroupName]="i" class="width-full">
                     <div class="md:flex md:items-center mb-6">
@@ -276,6 +277,8 @@
                 </div> 
             </div>
 
+
+
             <div class="md:items-center mb-6">
                 <div class="md:w-full">
                 <label style="font-family: 'Open Sans', sans-serif;" class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4" for="inline-full-name">
@@ -319,9 +322,8 @@
                 </div>
             </div>
 
-
-             <div class="width-full">
-                <div *ngFor="let group of photo; let i = index;" class="width-full">
+            <div class="width-full">
+                <div *ngFor="let group of pictures; let i = index;" class="width-full">
                     <div class="md:flex md:items-center mb-6">
 
                         <div class="md:w-1/5">
@@ -360,14 +362,13 @@
                     
                 </div> 
             </div>
-
             
         
             <div class="md:flex md:items-center mb-6 ">
                 <div class="md:w-1/3"></div>
                 <div class="flex space-x-4 justify-end md:w-2/3">
-                    <button   [disabled]="form.invalid" (click)="createBar()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                        Crear
+                    <button   [disabled]="form.invalid" (click)="update()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                        Guardar
                     </button>
                     <button (click)="goBack()" class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
                         Regresar
