--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -1,3 +1,26 @@
 <app-header [hasSearchBar]="true" [searchBarContent]="'trago'"></app-header>
-<app-list [barOrDrink]="drinks"></app-list>
+<div  *ngIf="!loading" class="flex flex-wrap -mx-2 pb-12">
+  <div
+    *ngFor="let x of drinks"
+    class="w-1/3 px-2 rounded overflow-hidden my-2"
+  >
+    <img
+      class="w-full pl-16 pr-32 pt-16"
+      src="{{ x.pictures }}"
+      alt="Sunset in the mountains"
+    />
+    <div class="px-6 pl-16">
+      <div
+        class="bg-white rounded-full px-3 py-1 text-sm font-semibold text-black text-xl mr-2"
+      >
+        {{ x.name }}
+      </div>
+      <div
+        class="bg-white rounded-full px-3 py-1 text-sm text-grey-darker mr-2"
+      >
+        {{ x.owner.name }}
+      </div>
+    </div>
+  </div>
+</div>
 <app-footer></app-footer>
