--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,5 +1,5 @@
 
-<div class="flex flex-wrap -mx-2 pb-12">
+<div  class="flex flex-wrap -mx-2 pb-12">
   <div
     *ngFor="let x of barOrDrink"
     class="w-1/3 px-2 rounded overflow-hidden my-2"
@@ -13,12 +13,12 @@
       <div
         class="bg-white rounded-full px-3 py-1 text-sm font-semibold text-black text-xl mr-2"
       >
-        {{ x.title }}
+        {{ x.name }}
       </div>
       <div
         class="bg-white rounded-full px-3 py-1 text-sm text-grey-darker mr-2"
       >
-        {{ x.subtitle }}
+        {{ getZone(x.location.zone) }}
       </div>
     </div>
   </div>
